--- a/index.html
+++ b/index.html
@@ -1,78 +1,88 @@
 <!DOCTYPE html>
-<!-- saved from url=(0051)file:///C:/Users/CHS-39/Documents/dfgdfg/index.html -->
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>meet for free </title>
- 
-</head>
-<body>
-  <nav>
-    <a href="https://junaidakhtar1247.wixsite.com/meet-for-free">Home</a>
-    <a href="https://junaidakhtar1247.wixsite.com/meet-for-free/members">member</a>
-    <a href="https://junaidakhtar1247.wixsite.com/meet-for-free/groups">group</a>
-    <a href="https://junaidakhtar1247.wixsite.com/meet-for-free/shared-gallery">gallery</a>
-  </nav>
-
-  <header id="home">
-    <h1>Welcome to Site</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rem, ipsum ducimus assumenda voluptatibus quia dolor atque iusto recusandae voluptates! Consequuntur ut distinctio labore. Odit ut incidunt maiores odio accusantium.</p>
-  </header>
-
-  <section id="member">
-    <h2>About Us</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rem, ipsum ducimus assumenda voluptatibus quia dolor atque iusto recusandae voluptates! Consequuntur ut distinctio labore. Odit ut incidunt maiores odio accusantium</p>
-  </section>
-
-  <section id="group">
-    <h2>Services</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rem, ipsum ducimus assumenda voluptatibus quia dolor atque iusto recusandae voluptates! Consequuntur ut distinctio labore. Odit ut incidunt maiores odio accusantium</p>
-  </section>
-
-  <section id="gallery">
-    <h2>Portfolio</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam rem, ipsum ducimus assumenda voluptatibus quia dolor atque iusto recusandae voluptates! Consequuntur ut distinctio labore. Odit ut incidunt maiores odio accusantium</p>
-  </section>
-
-    <style>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>My Awesome Web Page</title>
+  <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #f4f4f4;
+      background: #f0f2f5;
       color: #333;
     }
-    header, section, footer {
-      padding: 20px;
-      margin: 100px;
-    }
-    nav {
-      background: #333;
-      color: #fff;
-      margin: 10px;
-    }
-
-    nav a {
-      color: #fff;
-      margin-right: 15px;
-      text-decoration: none;
-    }
     header {
-      background-color: #ccc;
+      background: #4a90e2;
+      color: white;
+      padding: 20px 40px;
       text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    main {
+      padding: 40px;
+      max-width: 1000px;
+      margin: auto;
     }
     section {
-      background-color: #fff;
-      border: 1px solid #ddd;
+      margin-bottom: 40px;
     }
     footer {
-      background: #333;
-      color: #fff;
       text-align: center;
+      background: #333;
+      color: white;
+      padding: 15px 0;
+    }
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
   </style>
+</head>
+<body>
 
+  <header>
+    <h1>Welcome to My Website</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
+  <main>
+    <section id="about" class="card">
+      <h2>About Me</h2>
+      <p>Hello! I'm a passionate web developer with a love for clean design and functional code. I specialize in building modern, responsive websites and applications using HTML, CSS, and JavaScript.</p>
+    </section>
 
+    <section id="services" class="card">
+      <h2>My Services</h2>
+      <ul>
+        <li>Website Design & Development</li>
+        <li>Responsive Web Apps</li>
+        <li>SEO Optimization</li>
+        <li>Maintenance & Support</li>
+      </ul>
+    </section>
 
-</body></html>
+    <section id="contact" class="card">
+      <h2>Contact Me</h2>
+      <p>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></p>
+      <p>Phone: +91-XXXXXXXXXX</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 My Awesome Website. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
