--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
 
   <header>
-    <img src="https://photos.google.com/photo/AF1QipMueB-qEel7Ff-M1An5Jn7L60ZLqvtfgjsc8_4d" alt="Banner" />
+    <img src="C:\Users\LAB-28\Downloads\IMG20241205220014.jpg" alt="Banner" />
     <div class="overlay">
       <h1>Junaid Akhtar</h1>
       <p>Personal Profile Website</p>
