--- a/index.html
+++ b/index.html
@@ -3,48 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Junaid Akhtar - Profile</title>
+  <title>My Awesome Web Page</title>
   <style>
+    
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: #f4f4f4;
+      padding: 0;
+      background: #f0f2f5;
       color: #333;
     }
     header {
-      position: relative;
-    }
-    header img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-    .overlay {
-      position: absolute;
-      top: 20px;
-      left: 30px;
+      background: #4a90e2;
       color: white;
-      text-shadow: 1px 1px 5px black;
+      padding: 20px 40px;
+      text-align: center;
     }
-    .overlay h1 {
-      margin: 0;
-      font-size: 2.5rem;
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
     }
     main {
-      max-width: 900px;
-      margin: 40px auto;
-      padding: 0 20px;
+      padding: 40px;
+      max-width: 1000px;
+      margin: auto;
     }
-    .card {
-      background: white;
-      padding: 25px;
-      margin-bottom: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: #4a90e2;
-      margin-top: 0;
+    section {
+      margin-bottom: 40px;
     }
     footer {
       text-align: center;
@@ -52,61 +39,51 @@
       color: white;
       padding: 15px 0;
     }
-    a {
-      color: #4a90e2;
-    }
-    .img{
-        width: 5px;
-        height: 5px;
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="C:\Users\LAB-28\Downloads\IMG20241205220014.jpg" alt="Banner" />
-    <div class="overlay">
-      <h1>Junaid Akhtar</h1>
-      <p>Personal Profile Website</p>
-    </div>
+    <h1>Welcome to My Website</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
   <main>
-    <section class="card">
-      <h2>Basic Information</h2>
-      <p><strong>Full Name:</strong> Junaid Akhtar</p>
-      <p><strong>Father's Name:</strong> Jamil Akhtar</p>
-      <p><strong>Address:</strong> Ward No. 02, near Masjid, Runnisaidpur, Sitamarhi, Bihar (843328)</p>
-      <p><strong>Country:</strong> India</p>
-    </section>
-
-    <section class="card">
+    <section id="about" class="card">
       <h2>About Me</h2>
-      <p>Hello! I'm Junaid Akhtar, a tech enthusiast who loves exploring the digital world. I enjoy working with web tools, editing images online, and creating content that is both creative and functional. I'm also interested in learning and growing in the world of technology and design.</p>
+      <p>Hello! I'm a passionate web developer with a love for clean design and functional code. I specialize in building modern, responsive websites and applications using HTML, CSS, and JavaScript.</p>
     </section>
 
-    <section class="card">
-      <h2>Skills & Interests</h2>
+    <section id="services" class="card">
+      <h2>My Services</h2>
       <ul>
-        <li>Web Design & HTML</li>
-        <li>Image Editing</li>
-        <li>Online Tools & Free Software</li>
-        <li>Creative Content Making</li>
-        <li>Exploring Technology</li>
+        <li>Website Design & Development</li>
+        <li>Responsive Web Apps</li>
+        <li>SEO Optimization</li>
+        <li>Maintenance & Support</li>
       </ul>
     </section>
 
-    <section class="card">
+    <section id="contact" class="card">
       <h2>Contact Me</h2>
-      <p><strong>Email:</strong> yourname@example.com</p>
-      <p><strong>Phone:</strong> +91-XXXXXXXXXX</p>
+      <p>Email: <a href="mailto:yourname@example.com">yourname@example.com</a></p>
+      <p>Phone: +91-XXXXXXXXXX</p>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Junaid Akhtar. All rights reserved.</p>
+    <p>© 2025 My Awesome Website. All rights reserved.</p>
   </footer>
 
 </body>
 </html>
-
