--- a/index.html
+++ b/index.html
@@ -1,108 +1,189 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Simple Calculator</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      display: flex;
-      height: 100vh;
-      align-items: center;
-      justify-content: center;
-    }
-    .calculator {
-      background: #fff;
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    }
-    input[type="text"] {
-      width: 100%;
-      height: 50px;
-      font-size: 24px;
-      text-align: right;
-      margin-bottom: 10px;
-      border-radius: 10px;
-      border: 1px solid #ccc;
-      padding-right: 10px;
-    }
-    .buttons {
-      display: grid;
-      grid-template-columns: repeat(4, 60px);
-      gap: 10px;
-    }
-    button {
-      height: 50px;
-      font-size: 20px;
-      border: none;
-      border-radius: 10px;
-      background-color: #eee;
-      cursor: pointer;
-    }
-    button.operator {
-      background-color: #f9a825;
-      color: white;
-    }
-    button.equal {
-      background-color: #4caf50;
-      color: white;
-    }
-    button.clear {
-      background-color: #f44336;
-      color: white;
-    }
-  </style>
-</head>
-<body>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+    <meta charset="UTF-8">
+    <title>Neon Profile Card with Cursor Effect</title>
+    <style>
+        * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        cursor: none; /* Hide system cursor */
+        }
 
-<div class="calculator">
-  <input type="text" id="display" readonly>
-  <div class="buttons">
-    <button onclick="clearDisplay()" class="clear">C</button>
-    <button onclick="appendValue('/')">/</button>
-    <button onclick="appendValue('*')">*</button>
-    <button onclick="appendValue('-')">-</button>
+        body {
+        height: 100vh;
+        background: radial-gradient(circle at center, #0f0c29, #302b63, #24243e);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-family: 'Segoe UI', sans-serif;
+        overflow: hidden;
+        position: relative;
+        }
 
-    <button onclick="appendValue('7')">7</button>
-    <button onclick="appendValue('8')">8</button>
-    <button onclick="appendValue('9')">9</button>
-    <button onclick="appendValue('+')" class="operator">+</button>
+        /* Neon Profile Card */
+        .profile-card {
+        background: #111;
+        padding: 30px;
+        width: 350px;
+        border-radius: 20px;
+        text-align: center;
+        position: relative;
+        z-index: 1;
+        box-shadow: 0 0 30px #00f2fe88;
+        border: 2px solid #00f2fe;
+        animation: pulse 2s infinite;
+        }
 
-    <button onclick="appendValue('4')">4</button>
-    <button onclick="appendValue('5')">5</button>
-    <button onclick="appendValue('6')">6</button>
-    <button onclick="calculate()" class="equal" rowspan="2">=</button>
+        .profile-card::before {
+        content: "";
+        position: absolute;
+        top: -2px;
+        left: -2px;
+        right: -2px;
+        bottom: -2px;
+        z-index: -1;
+        background: linear-gradient(45deg, #00f2fe, #4facfe, #00f2fe);
+        background-size: 400% 400%;
+        animation: neonBorder 6s linear infinite;
+        border-radius: 22px;
+        }
 
-    <button onclick="appendValue('1')">1</button>
-    <button onclick="appendValue('2')">2</button>
-    <button onclick="appendValue('3')">3</button>
-    
-    <button onclick="appendValue('0')">0</button>
-    <button onclick="appendValue('.')">.</button>
-  </div>
-</div>
+        .profile-card img {
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;
+        border: 4px solid #00f2fe;
+        object-fit: cover;
+        margin-bottom: 15px;
+        }
 
-<script>
-  const display = document.getElementById('display');
+        .profile-card h2 {
+        color: #00f2fe;
+        margin-bottom: 5px;
+        }
 
-  function appendValue(value) {
-    display.value += value;
-  }
+        .profile-card p {
+        color: #ccc;
+        font-size: 14px;
+        margin-bottom: 8px;
+        }
 
-  function clearDisplay() {
-    display.value = '';
-  }
+        .socials {
+        margin-top: 15px;
+        }
 
-  function calculate() {
-    try {
-      display.value = eval(display.value);
-    } catch (e) {
-      display.value = 'Error';
-    }
-  }
-</script>
+        .socials a {
+        margin: 0 10px;
+        color: #00f2fe;
+        font-size: 20px;
+        text-decoration: none;
+        transition: transform 0.3s;
+        }
 
-</body>
-</html>
+        .socials a:hover {
+        transform: scale(1.2);
+        color: #4facfe;
+        }
+
+        @keyframes neonBorder {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+        }
+
+        @keyframes pulse {
+        0%, 100% {
+            box-shadow: 0 0 20px #00f2fe88;
+        }
+        50% {
+            box-shadow: 0 0 40px #00f2fe;
+        }
+        }
+
+        /* Custom Cursor Dot */
+        .cursor-dot {
+        position: fixed;
+        width: 12px;
+        height: 12px;
+        background-color: #00f2fe;
+        border-radius: 50%;
+        pointer-events: none;
+        z-index: 9999;
+        transition: transform 0.1s ease;
+        mix-blend-mode: difference;
+        }
+
+        /* Ripple Effect on Click */
+        .click-ripple {
+        position: fixed;
+        width: 40px;
+        height: 40px;
+        border: 2px solid #00f2fe;
+        border-radius: 50%;
+        pointer-events: none;
+        animation: ripple 0.5s ease-out forwards;
+        z-index: 9999;
+        }
+
+        @keyframes ripple {
+        0% {
+            transform: scale(0.3);
+            opacity: 1;
+        }
+        100% {
+            transform: scale(3);
+            opacity: 0;
+        }
+        }
+    </style>
+    <!-- Font Awesome for social icons -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    </head>
+    <body>
+
+    <!-- Custom Cursor Dot -->
+    <div class="cursor-dot" id="cursor-dot"></div>
+
+    <!-- Profile Card -->
+    <div class="profile-card">
+    <img src="C:\Users\anjum\OneDrive\Documents\vs code\kazi-clt.jpg" alt="Profile Photo">
+    <h2>Junaid Akhtar</h2>
+    <p>Student, Class 10</p>
+    <p>Darul Huda Islamic University</p>
+    <p>Sitamarhi, Bihar</p>
+    <div class="socials">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-whatsapp"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+    </div>
+    </div>
+
+    <!-- JS for Cursor Movement & Ripple -->
+    <script>
+    const cursor = document.getElementById("cursor-dot");
+
+    document.addEventListener("mousemove", e => {
+        cursor.style.left = e.pageX + "px";
+        cursor.style.top = e.pageY + "px";
+    });
+
+    document.addEventListener("click", e => {
+        const ripple = document.createElement("div");
+        ripple.className = "click-ripple";
+        ripple.style.left = (e.pageX - 20) + "px";
+        ripple.style.top = (e.pageY - 20) + "px";
+        document.body.appendChild(ripple);
+        setTimeout(() => ripple.remove(), 500);
+    });
+    </script>
+
+    </body>
+    </html>
