--- a/index.html
+++ b/index.html
@@ -154,15 +154,15 @@
 
     <!-- Profile Card -->
     <div class="profile-card">
-    <img src="C:\Users\anjum\OneDrive\Documents\vs code\kazi-clt.jpg" alt="Profile Photo">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRAU7iJuMTgQnJr1WV1qjkAdQim8X63hHYAeg&s" alt="Profile Photo">
     <h2>Junaid Akhtar</h2>
     <p>Student, Class 10</p>
     <p>Darul Huda Islamic University</p>
     <p>Sitamarhi, Bihar</p>
     <div class="socials">
-        <a href="#"><i class="fab fa-facebook"></i></a>
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+       
+        <a href="https://instagram.com/meetforfree92
+"><i class="fab fa-instagram"></i></a>
     </div>
     </div>
 
