--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="C:\Users\anjum\Downloads\ghjfgjhfgtk.jpg" alt="Profile Picture">
+    <img src="https://cdn.sahityapedia.com/images/profile/3529b6c2e2d26c96246e2271db850474_dce89f9b39db7cf9a57d3beb318d5efe_600.jpg" alt="Profile Picture">
     <h2>Junaid Akhtar</h2>
     <p>Passionate Student | Tech Enthusiast | Creative Thinker</p>
     <p>Currently studying at Darul Huda Islamic University, always exploring new ideas and skills.</p>
