--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <a href="#" onclick="showPage('home')">Home</a>
+    <a href="https://junaidakhtar1247.wixsite.com/meet-for-free" onclick="showPage('home')">Home</a>
     <a href="#" onclick="showPage('about')">About</a>
     <a href="#" onclick="showPage('skills')">Skills</a>
     <a href="#" onclick="showPage('projects')">Projects</a>
@@ -115,7 +115,7 @@
   <!-- Page 1: Home -->
   <div class="page active" id="home">
     <div class="card">
-      <img src="C:\Users\anjum\Downloads\ghjfgjhfgtk.jpg" alt="Profile Picture">
+      <img src="https://cdn.sahityapedia.com/images/profile/3529b6c2e2d26c96246e2271db850474_dce89f9b39db7cf9a57d3beb318d5efe_400.jpg" alt="Profile Picture">
       <h2>Junaid Akhtar</h2>
       <p>Student | Tech Enthusiast | Creative Thinker</p>
     </div>
