--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
   <div class="page" id="contact">
     <div class="card">
       <h2>Contact Me</h2>
-      <p>Email: example@gmail.com<br>
-         Instagram: @junaid_profile<br>
+      <p>Email: junai29akhtar@gmail.com<br>
+         Instagram: @meetforfree92<br>
          Address: Runnisaidpur, Sitamarhi, Bihar
       </p>
     </div>
