--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <a href="https://junaidakhtar1247.wixsite.com/meet-for-free" onclick="showPage('home')">Home</a>
+    <a href="#" onclick="showPage('home')">Home</a>
     <a href="#" onclick="showPage('about')">About</a>
     <a href="#" onclick="showPage('skills')">Skills</a>
     <a href="#" onclick="showPage('projects')">Projects</a>
